# ChangeLog for sys-apps/sandbox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/sandbox/ChangeLog,v 1.120 2009/04/15 19:40:19 maekke Exp $

  15 Apr 2009; Markus Meier <maekke@gentoo.org> sandbox-1.6-r2.ebuild:
  amd64/x86 stable, bug #265376

  13 Apr 2009; Jeroen Roovers <jer@gentoo.org> sandbox-1.6-r2.ebuild:
  Stable for HPPA (bug #265376).

  12 Apr 2009; Brent Baude <ranger@gentoo.org> sandbox-1.6-r2.ebuild:
  stable ppc64, bug 265376

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org> sandbox-1.6-r2.ebuild:
  Stable on alpha, bug #265376

  09 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> sandbox-1.6-r2.ebuild:
  Stable on sparc, bug #265376

  09 Apr 2009; Mike Frysinger <vapier@gentoo.org> sandbox-1.6-r2.ebuild,
  sandbox-1.9.ebuild:
  Make sure /etc/sandbox.d has 0755 perms #265376 by Friedrich Oslage.

*sandbox-1.9 (09 Apr 2009)

  09 Apr 2009; Mike Frysinger <vapier@gentoo.org> +sandbox-1.9.ebuild:
  Version bump.

*sandbox-1.8 (05 Apr 2009)

  05 Apr 2009; Mike Frysinger <vapier@gentoo.org> +sandbox-1.8.ebuild:
  Version bump to fix #263657 #264399 #264476 #264478 #264676.

*sandbox-1.6-r2 (02 Apr 2009)

  02 Apr 2009; Mike Frysinger <vapier@gentoo.org>
  +files/sandbox-1.6-disable-pthread.patch, +sandbox-1.6-r2.ebuild:
  Disable pthread locks to make 1.6 regression free #264476.

*sandbox-1.6-r1 (31 Mar 2009)

  31 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +files/sandbox-1.6-disable-qa-static.patch,
  +files/0001-libsandbox-handle-more-at-functions.patch,
  +sandbox-1.6-r1.ebuild:
  Backport a fix or two so we can stabilize this version.

*sandbox-1.7 (31 Mar 2009)

  31 Mar 2009; Mike Frysinger <vapier@gentoo.org> +sandbox-1.7.ebuild:
  Version bump.

*sandbox-1.6 (12 Mar 2009)

  12 Mar 2009; Mike Frysinger <vapier@gentoo.org> +sandbox-1.6.ebuild:
  Version bump.

*sandbox-1.5 (11 Mar 2009)

  11 Mar 2009; Mike Frysinger <vapier@gentoo.org> +sandbox-1.5.ebuild: